network/istiod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: istiod
  namespace: istio-system
spec:
  selector:
    app: istiod
    istio: pilot
  ports:
  - name: grpc-xds
    port: 15010
    targetPort: 15010
  - name: https-dns
    port: 15012
    targetPort: 15012
  - name: https-webhook
    port: 443
    targetPort: 15017
  - name: http-monitoring
    port: 15014
    targetPort: 15014
