network/istio-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istiod-ports
  namespace: istio-system
spec:
  podSelector:
    matchLabels:
      app: istiod
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 15010
          protocol: TCP
        - port: 15012
          protocol: TCP
        - port: 443
          protocol: TCP
        - port: 15014
          protocol: TCP
        - port: 80
          protocol: TCP
        - port: 15017
          protocol: TCP
      from:
        - ipBlock:
            cidr: 0.0.0.0/0  # Adjust as needed for allowed source ranges
